2007-11-21  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/builder.py (StatusResourceBuilder.force):
	simplify some 'if' statements
	* buildbot/slave/bot.py (Bot.remote_setBuilderList): don't
	consider the 'info' directory as a leftover directory. Patch from
	Benoit Sigoure, ticket #138.
	(others): remove trailing whitespace

2007-11-01  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/builder.py (StatusResourceBuilder.build_line):
	if there's no current step, don't try to display its description.
	Same crash as in #96, this time in the web page. Closes #111.

	* buildbot/status/web/base.py (OneLineMixin.make_line): tolerate
	results == None (i.e. when the build hasn't finished yet);
	previously this code exploded when trying to find a CSS class for
	that results value. Patch from Greg Ward. Closes #118.

	* buildbot/status/client.py (RemoteBuildStep.remote_getLogs):
	IBuildStepStatus.getLogs() returns a list, not a dict. Patch from
	Fabrice Crestois. Closes #121.

2007-10-31  Brian Warner  <warner@lothar.com>

	* buildbot/status/words.py (Contact.emit_status): if there's no
	current step, don't try to display its description. This should
	fix the crash when asking the irc bot about builds which are
	waiting for a build-wide Lock. Closes #96.

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): add
	'columnName' argument, from a patch by Ben Hearsum. Closes #120.

2007-10-16  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/slaves.py (BuildSlavesResource.body): fix
	timestamp, I was using %M (minutes) where I meant to be using
	%b (abbreviated month name). Closes #109.

2007-10-13  Brian Warner  <warner@lothar.com>

	* README (COPYING): make it clear that buildbot is distributed under
	the GPL (version 2)
	* COPYING: add a copy of the GPLv2 to the source tree
	* MANIFEST.in: .. and to the source distribution too

2007-10-10  Brian Warner  <warner@lothar.com>

	* buildbot/status/builder.py (Status.getURLForThing): update this